@@ -85,6 +85,10 @@ struct hostfakesplit_mod
 	size_t host_size;
 	int ordering;
 };
+struct fakedsplit_mod
+{
+	int ordering;
+};
 struct tcp_mod
 {
 	bool seq;
@@ -143,7 +147,7 @@ struct desync_profile
 	struct blob_item *tls_fake_last;
 
 	struct hostfakesplit_mod hfs_mod;
-
+	struct fakedsplit_mod fs_mod;
 	struct tcp_mod tcp_mod;
 
 	int udplen_increment;
