@@ -548,5 +548,6 @@ winws: --wf-raw-part
 nfqws: --dpi-desync=hostfakesplit
 nfqws: --dpi-desync-fake-tcp-mod=seq
 nfqws: --dpi-desync-fake-tls=!+offset
+nfqws: --dpi-desync-fakedsplit-mod=altorder
 blockcheck: new strategies
 blockcheck: curl test simulation : SIMULATE=1
